<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PhoneAuthFragment">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/verify_your_otp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/brownDark"
        android:fontFamily="@font/kurale"
        android:layout_marginTop="100dp"/>

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="@string/enter_otp"
        android:inputType="phone"
        android:maxLength="10"
        android:minHeight="48dp"
        android:paddingStart="5dp"
        android:textColorHint="@color/hintColor"
        app:layout_constraintEnd_toEndOf="@id/text"
        app:layout_constraintStart_toStartOf="@id/text"
        app:layout_constraintTop_toBottomOf="@id/text"
        tools:ignore="Autofill,RtlSymmetry,TextContrastCheck" />

    <Button
        android:id="@+id/verifyOtpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/red"
        android:text="@string/verify_and_login"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextPhone"
        app:layout_constraintStart_toStartOf="@id/editTextPhone"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/checkError"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="172dp"
        android:text="@string/textview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>