<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpFragment">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/sign_up_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/kurale"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="62sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signup_email"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="17.5dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="17.5dp"
        android:background="@drawable/edit_text_shape"
        android:elevation="6dp"
        android:ems="10"
        android:fontFamily="@font/kurale"
        android:hint="@string/your_email"
        android:inputType="textEmailAddress"
        android:maxLength="30"
        android:paddingStart="18dp"
        android:shadowColor="@color/black"
        android:shadowDy="4"
        android:textColorHint="@color/hintColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="Autofill,RtlSymmetry,TextContrastCheck,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/signup_username"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="17.5dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="17.5dp"
        android:background="@drawable/edit_text_shape"
        android:elevation="6dp"
        android:ems="10"
        android:fontFamily="@font/kurale"
        android:hint="@string/username"
        android:inputType="text"
        android:maxLength="30"
        android:paddingStart="18dp"
        android:shadowColor="@color/black"
        android:shadowDy="4"
        android:textColorHint="@color/hintColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_email"
        tools:ignore="Autofill,RtlSymmetry,TextContrastCheck,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/signup_password"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/edit_text_shape"
        android:elevation="6dp"
        android:ems="10"
        android:fontFamily="@font/kurale"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLength="8"
        android:paddingStart="18dp"
        android:shadowColor="@color/black"
        android:shadowDy="4"
        android:textColorHint="@color/hintColor"
        app:layout_constraintEnd_toEndOf="@+id/signup_username"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/signup_username"
        app:layout_constraintTop_toBottomOf="@+id/signup_username"
        tools:ignore="Autofill,RtlSymmetry,TextContrastCheck,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/signup_repeat_password"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/edit_text_shape"
        android:elevation="6dp"
        android:ems="10"
        android:fontFamily="@font/kurale"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:maxLength="8"
        android:paddingStart="18dp"
        android:shadowColor="@color/black"
        android:shadowDy="4"
        android:textColorHint="@color/hintColor"
        app:layout_constraintEnd_toEndOf="@+id/signup_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/signup_password"
        app:layout_constraintTop_toBottomOf="@+id/signup_password"
        tools:ignore="Autofill,RtlSymmetry,TextContrastCheck,VisualLintTextFieldSize" />


    <Button
        android:id="@+id/signupPageRegisterButton"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/brownDark"
        android:fontFamily="@font/kurale"
        android:text="@string/register"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="@+id/signup_repeat_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/signup_repeat_password"
        app:layout_constraintTop_toBottomOf="@+id/signup_repeat_password"
        tools:ignore="DuplicateSpeakableTextCheck,VisualLintButtonSize" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/kurale"
        android:text="@string/already_have_account"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/signupPageSigninButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signupPageSigninButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/kurale"
        android:text="@string/login"
        android:textColor="#2148F8"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView6" />

</androidx.constraintlayout.widget.ConstraintLayout>