<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/sign_in_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/kurale"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="64sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_useremail"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="17.5dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="17.5dp"
        android:background="@drawable/edit_text_shape"
        android:elevation="6dp"
        android:ems="10"
        android:fontFamily="@font/kurale"
        android:hint="@string/your_email"
        android:inputType="textEmailAddress"
        android:maxLength="30"
        android:paddingStart="18dp"
        android:shadowColor="@color/black"
        android:shadowDy="4"
        android:textColorHint="@color/hintColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="Autofill,RtlSymmetry,TextContrastCheck,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/login_userpassword"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/edit_text_shape"
        android:elevation="6dp"
        android:ems="10"
        android:fontFamily="@font/kurale"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLength="8"
        android:paddingStart="18dp"
        android:shadowColor="@color/black"
        android:shadowDy="4"
        android:textColorHint="@color/hintColor"
        app:layout_constraintEnd_toEndOf="@+id/login_useremail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/login_useremail"
        app:layout_constraintTop_toBottomOf="@+id/login_useremail"
        tools:ignore="Autofill,RtlSymmetry,TextContrastCheck,VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/kurale"
        android:text="@string/do_you_forgot_password"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/login_userpassword"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/login_userpassword"
        app:layout_constraintTop_toBottomOf="@+id/login_userpassword"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/loginPageloginButton"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="@color/red"
        android:fontFamily="@font/kurale"
        android:text="@string/login"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="@+id/login_userpassword"
        app:layout_constraintHorizontal_bias="0.035"
        app:layout_constraintStart_toStartOf="@+id/login_userpassword"
        app:layout_constraintTop_toBottomOf="@+id/login_userpassword"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck,VisualLintButtonSize" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/kurale"
        android:text="@string/do_you_have_account"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/loginPageSigninButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/loginPageSigninButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/kurale"
        android:text="@string/register"
        android:textColor="#2148F8"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/kurale"
        android:text="@string/other_sign_in_options"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPageloginButton" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/textView8"
        app:layout_constraintTop_toBottomOf="@id/textView8"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@id/textView8"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="614dp" >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/loginPhone"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="5dp"
            android:src="@drawable/baseline_phone_24"
            android:layout_margin="5dp"
            tools:ignore="RedundantNamespace" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/loginGoogle"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="5dp"
            android:layout_marginStart="5dp"
            android:src="@drawable/google_logo"
            android:layout_margin="5dp"
            tools:ignore="RedundantNamespace" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>